fix sidebar widget z-index value

--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -30,6 +30,7 @@ h3.widget-title {
 }
 
 #secondary {
+	z-index: 1;
 	.widget {
 		margin-bottom: 50px;
 	}
